# akritrim-colab

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/akritrim_colab/: __init__.py  app.py  cli.py  config.py  eventlog.py
src/akritrim_colab/agents/: __init__.py  claude_adapter.py  codex_adapter.py  stream_events.py
tests/: test_collaboration.py
